Fixes some of the deprecation warnings